# django-tutorial

./: README.md  db.sqlite3  pyproject.toml
django_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
polls/: admin.py  tests.py  views.py
polls/migrations/: 0001_initial.py
