[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["alpal <<>>"]
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
