[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["alpal"]
readme = "README.md"
packages = [{include = "polls"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
